k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-list
  labels:
    app: bucket-list
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bucket-list
  template:
    metadata:
      labels:
        app: bucket-list
    spec:
      serviceAccountName: bucket-list-sa
      containers:
        - name: bucket-list
          image: us-central1-docker.pkg.dev/clgcporg10-171/bucket-list/bucket-list:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
